...

            <Spinner
                android:id="@+id/filters_dialog_type_spinner"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/filters_dialog_apply_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                android:layout_width="wrap_content"
...

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/filters_dialog_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/filters_dialog_account_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/filters_dialog_sorting_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:text="@string/transaction_filters_any_status"
                    android:textColor="@color/colorText" />
                <RadioButton android:id="@+id/filters_dialog_status_radio_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
            </RadioGroup>
            <Switch
                android:id="@+id/filters_dialog_period_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:checked="true" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filters_dialog_period_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filters_dialog_period_from_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filters_dialog_period_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filters_dialog_period_to_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
            </com.google.android.material.textfield.TextInputLayout>
            <Switch
                android:id="@+id/filters_dialog_amount_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:checked="false" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/filters_dialog_amount_group"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filters_dialog_amount_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/filters_dialog_amount_min_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filters_dialog_amount_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/filters_dialog_amount_max_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
