...
    <string name="action_categories">Manage categories</string>
    <string name="action_apply">Apply</string>
    <string name="action_apply_description">Apply filters</string>
    <string name="action_show_archived">Show archived accounts</string>
    <string name="action_close_dialog">Close dialog</string>
    <string name="action_filter_all">All transactions</string>
    <string name="action_filter_expenses">Expenses</string>
    <string name="action_filter_incomes">Incomes</string>
    <string name="action_filter_transfers">Transfers</string>
    <string name="action_filter_more">More…</string>

    <string name="action_new_expense">Expense</string>
    <string name="action_new_income">Income</string>
...

    <string name="transaction_filters_confirmed_status">Confirmed</string>
    <string name="transaction_filters_unconfirmed_status">Unconfirmed</string>
    <string name="transaction_filters_sort_by">Sort by</string>
    <string name="transaction_filters_sort_most_recent">Most recent</string>

    <string name="transaction_filters_sort_least_recent">Least recent</string>
    <string name="transaction_filters_period">Filter by period</string>
    <string name="transaction_filters_from_date">From</string>
    <string name="transaction_filters_to_date">To</string>
    <string name="transaction_filters_start_date_error">Start date must occur before end date</string>
    <string name="transaction_filters_end_date_error">End date must occur after start date</string>
    <string name="transaction_filters_amount">Filter by amount</string>
    <string name="transaction_filters_min_amount">Min. amount</string>
    <string name="transaction_filters_max_amount">Max. amount</string>
    <string name="transaction_filters_min_amount_error">Min. amount must be lower than max. amount</string>
    <string name="transaction_filters_max_amount_error">Max. amount must be greater than min. amount</string>

    <!-- Category card -->
    <string name="category_card_options">Category options</string>
    <string name="category_card_delete">Delete</string>
    <string name="category_card_delete_modal">Delete category</string>
    <string name="category_card_delete_warning">Are you sure you want to do this? This action cannot be undone.</string>
...
